# llm-counsel

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  start.sh
backend/: __init__.py  config.py  counsel.py  main.py  openrouter.py  storage.py
backend/prompts/: __init__.py  personas.py  stage1.py  stage2.py  stage3.py
backend/utils/: __init__.py  case_parser.py  jurisdiction.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: MatterInterface.jsx  Sidebar.jsx  Stage1Display.jsx  Stage2Display.jsx  Stage3Display.jsx
